ready to test and deploy

--- a/src/components/TodoItem.css
+++ b/src/components/TodoItem.css
@@ -12,14 +12,15 @@ li{
     min-height: 35px;
     margin-top:15px;
     margin-bottom:15px;
-    transition: transform, color, background 0.3s;
+    /* transition: transform, color, background 0.3s; */
 }
-.container_item:hover{
+
+/* .container_item:hover{
    transform: scale(1.2);
    border-bottom: transparent;
    background: var(--dark-color);
    color: var(--ligth-color);
-}
+} */
 
 .container_item p{
     width: 33%;
@@ -32,4 +33,10 @@ li{
 .container_item .todoComplete{
     text-decoration: line-through;
     color: var(--soft-color);
+    background: var(--dark-color);
+}
+.btnIcon{
+    cursor: pointer;
+    background: transparent;
+    border: none;
 }
