--- a/src/components/TodoSearch.css
+++ b/src/components/TodoSearch.css
@@ -5,4 +5,7 @@
 .container_search .search{
     max-width:200px;
     margin: 0 auto;
+    background-color: white;
+    font-size: 15px;
+    text-align: center;
 }
